--- a/.env.local
+++ b/.env.local
@@ -38,3 +38,8 @@ COOKIE_TOKEN_NAME=access_token
 COOKIE_PATH=/
 COOKIE_SAMESITE=lax
 COOKIE_DOMAIN=localhost
+
+#Cloudflare
+CLOUDFLARE_URL=https://api.cloudflare.com/client/v4
+CLOUDFLARE_API_TOKEN=
+ACCOUNT_IDENTIFIER=
