add: cloudflare r2 연동

--- a/.env.local
+++ b/.env.local
@@ -40,6 +40,8 @@ COOKIE_SAMESITE=lax
 COOKIE_DOMAIN=localhost
 
 #Cloudflare
-CLOUDFLARE_URL=https://api.cloudflare.com/client/v4
-CLOUDFLARE_API_TOKEN=
-ACCOUNT_IDENTIFIER=
+CF_R2_URL=
+CF_R2_PUBLIC_URL=
+CF_R2_ACCESS_KEY=
+CF_R2_SECRET_ACCESS_KEY=
+CF_R2_BUCKET=
