--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "prisma:migrate:dev": "dotenv -e .env.development prisma migrate dev"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.183.0",
+    "@aws-sdk/s3-request-presigner": "^3.183.0",
     "@hapi/joi": "^17.1.1",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.2.0",
