--- a/package.json
+++ b/package.json
@@ -23,60 +23,60 @@
     "prisma:migrate:dev": "dotenv -e .env.development prisma migrate dev"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.183.0",
-    "@aws-sdk/s3-request-presigner": "^3.183.0",
+    "@aws-sdk/client-s3": "^3.238.0",
+    "@aws-sdk/s3-request-presigner": "^3.238.0",
     "@hapi/joi": "^17.1.1",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/common": "^9.2.1",
     "@nestjs/config": "^2.2.0",
-    "@nestjs/core": "^9.0.0",
-    "@nestjs/platform-express": "^9.0.0",
-    "@nestjs/swagger": "^6.1.2",
-    "@prisma/client": "4.3.1",
+    "@nestjs/core": "^9.2.1",
+    "@nestjs/platform-express": "^9.2.1",
+    "@nestjs/swagger": "^6.1.4",
+    "@prisma/client": "^4.8.0",
     "axios": "^0.27.2",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "date-fns": "^2.29.3",
-    "helmet": "^6.0.0",
+    "helmet": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^9.0.0",
-    "@nestjs/schematics": "^9.0.0",
-    "@nestjs/testing": "^9.0.0",
+    "@nestjs/cli": "^9.1.5",
+    "@nestjs/schematics": "^9.0.3",
+    "@nestjs/testing": "^9.2.1",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.14",
+    "@types/express": "^4.17.15",
     "@types/hapi__joi": "^17.1.8",
-    "@types/jest": "28.1.4",
+    "@types/jest": "^28.1.4",
     "@types/jsonwebtoken": "^8.5.9",
     "@types/multer": "^1.4.7",
-    "@types/node": "^16.0.0",
-    "@types/supertest": "^2.0.11",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
+    "@types/node": "^16.18.10",
+    "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^6.0.0",
-    "eslint": "^8.0.1",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "jest": "28.1.2",
-    "prettier": "^2.3.2",
-    "prisma": "^4.3.1",
-    "source-map-support": "^0.5.20",
-    "supertest": "^6.1.3",
-    "ts-jest": "28.0.5",
-    "ts-loader": "^9.2.3",
-    "ts-node": "^10.0.0",
-    "tsconfig-paths": "4.0.0",
-    "typescript": "^4.8.3"
+    "eslint": "^8.30.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^28.1.2",
+    "prettier": "^2.8.1",
+    "prisma": "^4.8.0",
+    "source-map-support": "^0.5.21",
+    "supertest": "^6.3.3",
+    "ts-jest": "^28.0.5",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.0.0",
+    "typescript": "^4.9.4"
   },
   "jest": {
     "moduleFileExtensions": [
