--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prisma:generate": "prisma generate",
-    "prisma:migrate:dev": "dotenv -e .env.development prisma migrate dev"
+    "prisma:migrate:dev": "dotenv -e .env.development prisma migrate dev",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.287.0",
@@ -31,7 +32,7 @@
     "@nestjs/core": "^9.3.9",
     "@nestjs/platform-express": "^9.3.9",
     "@nestjs/swagger": "^6.2.1",
-    "@prisma/client": "^4.8.0",
+    "@prisma/client": "^4.11.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.1.0",
     "class-transformer": "^0.5.1",
@@ -69,7 +70,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "jest": "^28.1.3",
     "prettier": "^2.8.4",
-    "prisma": "^4.8.0",
+    "prisma": "^4.11.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^28.0.8",
