--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "date-fns": "^2.29.3",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
+    "minisearch": "^6.0.1",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
