--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "date-fns": "^2.29.3",
     "helmet": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "minisearch": "^6.0.1",
     "multer": "^1.4.5-lts.1",
     "reflect-metadata": "^0.1.13",
@@ -63,6 +64,7 @@
     "@types/multer": "^1.4.7",
     "@types/node": "^16.18.14",
     "@types/supertest": "^2.0.12",
+    "@types/lodash": "^4.14.194",
     "@typescript-eslint/eslint-plugin": "^5.54.1",
     "@typescript-eslint/parser": "^5.54.1",
     "cross-env": "^7.0.3",
