--- a/package.json
+++ b/package.json
@@ -46,9 +46,12 @@
     "lodash": "^4.17.21",
     "minisearch": "^6.0.1",
     "multer": "^1.4.5-lts.1",
+    "nest-winston": "^1.9.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.8.0"
+    "rxjs": "^7.8.0",
+    "winston": "^3.8.2",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.2.0",
