--- a/package.json
+++ b/package.json
@@ -28,15 +28,18 @@
     "@aws-sdk/client-s3": "^3.344.0",
     "@aws-sdk/s3-request-presigner": "^3.344.0",
     "@hapi/joi": "^17.1.1",
+    "@nestjs/cache-manager": "^1.0.0",
     "@nestjs/common": "^9.4.2",
     "@nestjs/config": "^2.3.2",
     "@nestjs/core": "^9.4.2",
     "@nestjs/platform-express": "^9.4.2",
+    "@nestjs/schedule": "^2.2.2",
     "@nestjs/swagger": "^6.3.0",
     "@octokit/rest": "^19.0.11",
     "@prisma/client": "^4.15.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "cache-manager": "^5.2.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
@@ -61,6 +64,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
+    "@types/cron": "^2.0.1",
     "@types/express": "^4.17.17",
     "@types/hapi__joi": "^17.1.9",
     "@types/jest": "^29.5.2",
