--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "cross-env NODE_ENV=development nest start --watch",
+    "start:dev": "cross-env NODE_ENV=development nest start -b swc --type-check --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -62,6 +62,8 @@
     "@nestjs/cli": "^10.0.2",
     "@nestjs/schematics": "^10.0.1",
     "@nestjs/testing": "^10.0.1",
+    "@swc/cli": "^0.1.62",
+    "@swc/core": "^1.3.66",
     "@types/bcrypt": "^5.0.0",
     "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.3",
