--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/platform-express": "^10.1.1",
     "@nestjs/schedule": "^3.0.1",
     "@nestjs/swagger": "^7.1.2",
+    "@nestjs/terminus": "^10.0.1",
     "@octokit/rest": "^20.0.1",
     "@prisma/client": "^5.0.0",
     "@sentry/node": "^7.60.0",
