--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "solid-server-nest",
+  "name": "hashnode-server-nest",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -25,21 +25,22 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.427.0",
-    "@aws-sdk/s3-request-presigner": "^3.427.0",
+    "@aws-sdk/client-s3": "^3.450.0",
+    "@aws-sdk/s3-request-presigner": "^3.450.0",
     "@hapi/joi": "^17.1.1",
-    "@nestjs/cache-manager": "^2.1.0",
-    "@nestjs/common": "^10.2.7",
+    "@nestjs/cache-manager": "^2.1.1",
+    "@nestjs/common": "^10.2.8",
     "@nestjs/config": "^3.1.1",
-    "@nestjs/core": "^10.2.7",
-    "@nestjs/platform-express": "^10.2.7",
-    "@nestjs/schedule": "^3.0.4",
-    "@nestjs/swagger": "^7.1.13",
+    "@nestjs/core": "^10.2.8",
+    "@nestjs/jwt": "^10.2.0",
+    "@nestjs/platform-express": "^10.2.8",
+    "@nestjs/schedule": "^4.0.0",
+    "@nestjs/swagger": "^7.1.15",
     "@nestjs/terminus": "^10.1.1",
     "@octokit/rest": "^20.0.2",
-    "@prisma/client": "^5.4.2",
-    "@sentry/node": "^7.73.0",
-    "axios": "^1.5.1",
+    "@prisma/client": "^5.6.0",
+    "@sentry/node": "^7.80.1",
+    "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.2.4",
     "class-transformer": "^0.5.1",
@@ -47,10 +48,11 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "date-fns": "^2.30.0",
-    "helmet": "^7.0.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "minisearch": "^6.1.0",
+    "minisearch": "^6.2.0",
+    "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
     "nest-winston": "^1.9.4",
     "reflect-metadata": "^0.1.13",
@@ -60,33 +62,34 @@
     "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
-    "@nestjs/cli": "^10.1.18",
-    "@nestjs/schematics": "^10.0.2",
-    "@nestjs/testing": "^10.2.7",
+    "@nestjs/cli": "^10.2.1",
+    "@nestjs/schematics": "^10.0.3",
+    "@nestjs/testing": "^10.2.8",
     "@swc/cli": "^0.1.62",
-    "@swc/core": "^1.3.92",
-    "@types/bcrypt": "^5.0.0",
-    "@types/compression": "^1.7.3",
-    "@types/cookie-parser": "^1.4.4",
+    "@swc/core": "^1.3.96",
+    "@types/bcrypt": "^5.0.2",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cron": "^2.0.1",
-    "@types/express": "^4.17.19",
-    "@types/hapi__joi": "^17.1.11",
-    "@types/jest": "^29.5.5",
-    "@types/jsonwebtoken": "^9.0.3",
-    "@types/lodash": "^4.14.199",
-    "@types/multer": "^1.4.8",
-    "@types/node": "^20.8.4",
-    "@types/supertest": "^2.0.14",
-    "@typescript-eslint/eslint-plugin": "^6.7.5",
-    "@typescript-eslint/parser": "^6.7.5",
+    "@types/express": "^4.17.21",
+    "@types/hapi__joi": "^17.1.13",
+    "@types/jest": "^29.5.8",
+    "@types/jsonwebtoken": "^9.0.5",
+    "@types/lodash": "^4.14.201",
+    "@types/ms": "^0.7.34",
+    "@types/multer": "^1.4.10",
+    "@types/node": "^20.9.0",
+    "@types/supertest": "^2.0.16",
+    "@typescript-eslint/eslint-plugin": "^6.11.0",
+    "@typescript-eslint/parser": "^6.11.0",
     "cross-env": "^7.0.3",
     "dotenv-cli": "^7.3.0",
-    "eslint": "^8.51.0",
+    "eslint": "^8.53.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
     "jest": "^29.7.0",
-    "prettier": "^3.0.3",
-    "prisma": "^5.4.2",
+    "prettier": "^3.1.0",
+    "prisma": "^5.6.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
