--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "axios": "^1.6.1",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.2.4",
+    "cjk-slug": "^0.3.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.7.4",
@@ -58,6 +59,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^5.0.5",
     "rxjs": "^7.8.1",
+    "slugify": "^1.6.6",
     "winston": "^3.11.0",
     "winston-daily-rotate-file": "^4.7.1"
   },
