add: post, tags API 추가 및 sqlite -> pg로 변경

--- a/.env.local
+++ b/.env.local
@@ -8,7 +8,10 @@
 # App
 # -----------------------------------------------------------------------------
 PORT=8080
-DATABASE_URL="file:./dev.db"
+# DATABASE_URL="file:./dev.db" # SQLite
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5433/mydb?schema=public" # PostgreSQL
+DATABASE_URL=postgresql://{POSTGRES_USER}:{POSTGRES_PASSWORD}@localhost:{PORT}/{POSTGRES_DB}?schema=public
+
 # -----------------------------------------------------------------------------
 # password
 # -----------------------------------------------------------------------------
