--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "db:init": "prisma generate",
-    "db:dev": "dotenv -e .env.development prisma migrate dev",
+    "db:init": "dotenv -e .env prisma generate",
+    "db:dev": "dotenv -e .env prisma migrate dev",
+    "db:push": "dotenv -e .env prisma migrate push",
     "postinstall": "prisma generate"
   },
   "dependencies": {
