--- a/.env.local
+++ b/.env.local
@@ -24,7 +24,7 @@ DEPLOY_GROUP=local
 # -----------------------------------------------------------------------------
 #Cookie
 # -----------------------------------------------------------------------------
-COOKIE_TOKEN_NAME=access_token
+COOKIE_TOKEN_NAME=hashnode.access_token
 COOKIE_PATH=/
 COOKIE_SAMESITE=lax
 COOKIE_DOMAIN=localhost
