--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/terminus": "^10.2.3",
+    "@nestjs/throttler": "^5.1.2",
     "@octokit/rest": "^20.1.0",
     "@prisma/client": "^5.13.0",
     "@sentry/node": "^7.112.2",
