--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:init": "dotenv -e .env prisma generate",
     "db:dev": "dotenv -e .env prisma migrate dev",
-    "db:push": "dotenv -e .env prisma migrate push",
+    "db:push": "dotenv -e .env prisma db push",
     "postinstall": "prisma generate"
   },
   "dependencies": {
