add: serialize 블로그 추가 및 스키마 수정

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "db:init": "dotenv -e .env prisma generate",
     "db:dev": "dotenv -e .env prisma migrate dev",
     "db:push": "dotenv -e .env prisma db push",
+    "db:reset": "dotenv -e .env prisma migrate reset",
     "postinstall": "prisma generate"
   },
   "dependencies": {
