add: docker 파일 수정

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,11 @@ prisma/dev.db-journal
 
 # logs
 audit.json
+
+# docker
+docker/data
+docker/redis-data
+docker/redis.conf
+
+#deploy
+deploy/fly.io/data
