--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,8 @@
 # -----------------------------------------------------------------------------
 PORT="8080"
 # DATABASE_URL="file:./dev.db" # SQLite
-# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5433/mydb?schema=public" # PostgreSQL
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public" # PostgreSQL
+# DATABASE_URL="postgresql://template:templatepw@server_db:5432/templatedb?schema=public" # Docker
 DATABASE_URL="postgresql://{POSTGRES_USER}:{POSTGRES_PASSWORD}@localhost:{PORT}/{POSTGRES_DB}?schema=public"
 
 # -----------------------------------------------------------------------------
