--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,9 +4,10 @@ services:
     image: postgres:13.1
     restart: always
     environment:
+      POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgrespw
     ports:
-      - '5433:5432'
+      - '5432:5432'
     volumes:
       - ./data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
