--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -7,7 +7,29 @@ services:
       POSTGRES_PASSWORD: postgrespw
       TZ: Asia/Seoul
     ports:
-      - '5433:5432'
+      - 5433:5432
     volumes:
       - ./data:/var/lib/postgresql/data
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+  # ollama:
+  #   container_name: ollama
+  #   image: ollama/ollama:latest
+  #   volumes:
+  #     - ./ollama:/root/.ollama
+  #   ports:
+  #     - 11434:11434
+  #   pull_policy: always
+  #   tty: true
+  #   restart: always
+  # ollama-webui:
+  #   image: ollama-webui:latest
+  #   container_name: ollama-webui
+  #   depends_on:
+  #     - ollama
+  #   ports:
+  #     - 9090:8080
+  #   environment:
+  #     - 'OLLAMA_API_BASE_URL=http://ollama:11434/api'
+  #   extra_hosts:
+  #     - host.docker.internal:host-gateway
+  #   restart: unless-stopped
