add: 파일 업로드 API 추가

--- a/.env.example
+++ b/.env.example
@@ -50,3 +50,11 @@ GITHUB_CLIENT_SECRET=
 #hash
 # -----------------------------------------------------------------------------
 HASH_SECRET="cEctAEpGT4DPQYpQQ6vYY4uYmYePX1XbFC8g15NpneE="
+# -----------------------------------------------------------------------------
+#cloudflare
+# -----------------------------------------------------------------------------
+CLOUDFLARE_ID=""
+CLOUDFLARE_API_TOKEN=""
+CLOUDFLARE_R2_ACCESS_KEY=""
+CLOUDFLARE_R2_SECRET_ACCESS_KEY=""
+CLOUDFLARE_R2_BUCKET_NAME=""
