--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "db:reset": "prisma migrate reset"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.583.0",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.3.8",
     "@nestjs/config": "^3.2.2",
@@ -39,6 +40,8 @@
     "@octokit/rest": "^20.1.1",
     "@prisma/client": "^5.14.0",
     "@sentry/node": "^8.0.0",
+    "aws-sdk": "^2.1629.0",
+    "axios": "^1.7.2",
     "cache-manager": "^5.5.2",
     "cjk-slug": "^0.3.1",
     "class-transformer": "^0.5.1",
@@ -46,6 +49,7 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "date-fns": "^3.6.0",
+    "form-data": "^4.0.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
