--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "db:init": "prisma generate",
-    "db:dev": "prisma migrate dev",
-    "db:push": "prisma db push",
-    "db:reset": "prisma migrate reset"
+    "db:migrate:dev": "prisma migrate dev",
+    "db:migrate:reset": "prisma migrate reset",
+    "db:studio": "prisma studio",
+    "db:push": "prisma db push"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.583.0",
