add: databae pg => supabase migration

--- a/.env.example
+++ b/.env.example
@@ -4,15 +4,22 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 # DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+# DATABASE_URL="file:./dev.db" # SQLite
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public" # PostgreSQL
+# DATABASE_URL="postgresql://template:templatepw@server_db:5432/templatedb?schema=public" # Docker
 # -----------------------------------------------------------------------------
 # App
 # -----------------------------------------------------------------------------
 PORT="8080"
-# DATABASE_URL="file:./dev.db" # SQLite
-# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public" # PostgreSQL
-# DATABASE_URL="postgresql://template:templatepw@server_db:5432/templatedb?schema=public" # Docker
-DATABASE_URL="postgresql://{POSTGRES_USER}:{POSTGRES_PASSWORD}@localhost:{PORT}/{POSTGRES_DB}?schema=public"
-
+# -----------------------------------------------------------------------------
+# Database
+# Set this to the Transaction connection pooler string you copied in Step 1
+# Set this to the Session connection pooler string you copied in Step 1
+# ex) DATABASE_URL="postgresql://postgres:postgres@127.0.0.1:54322/postgres?pgbouncer=true&connection_limit=1&schema=public"
+# ex) DIRECT_URL="postgresql://postgres:postgres@127.0.0.1:54322/postgres"
+# -----------------------------------------------------------------------------
+DATABASE_URL="postgresql://{POSTGRES_USER}:{POSTGRES_PASSWORD}@{POSTGRES_HOST}:{PORT}/{POSTGRES_DB}?pgbouncer=true&connection_limit=1&schema=public"
+DIRECT_URL="postgresql://{POSTGRES_USER}:{POSTGRES_PASSWORD}@{POSTGRES_HOST}:{PORT}/{POSTGRES_DB}"
 # -----------------------------------------------------------------------------
 # password
 # -----------------------------------------------------------------------------
